# whackerhero

./: .gitignore  README.md  install.bat  setup.cfg
.github/workflows/: publish-to-pypi.yml
src/: whackerhero.py
