[metadata]
name=whackerhero
version=0.1.0
author=allejok96
description=Generate Boomwhacker play-along videos from MIDI files
long_description=file: README.md
long_description_content_type=text/markdown
url=https://github.com/allejok96/whackerhero
keywords=boomwhacker video generator midi piano-roll

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Sound/Audio :: MIDI
    Topic :: Multimedia :: Video

[options]
install_requires =
    mido
    moviepy
    pillow
package_dir =
    = src
py_modules = whackerhero
python_requires = >=3.7

[options.extras_require]
gui = Gooey

[options.entry_points]
console_scripts =
    whackercmd = whackerhero:main
gui_scripts =
    whackerhero = whackerhero:gui [gui]
